--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-6M7OSUH\\SQLEXPRESS;Database=CarTestPFA;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=DESKTOP-6M7OSUH\\SQLEXPRESS;Database=CarTestPFA;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True;"
+
   }
 }
